src/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
/* @import url("https://fonts.googleapis.com/css2?family=Lexend&display=swap"); */

/* General Styles Start */
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  /* font-family: "Poppins", sans-serif; */
  font-family: Lexend, sans-serif;
}
/* General Styles End */

/* Homepage Start */
.navbar {
  z-index: 3;
}
header {
  position: relative;
  height: 100vh;
}
.home-right {
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  width: 50%;
}

.home-right .slider-text {
  position: absolute;
  left: 0;
  bottom: 0;
  padding: 20px 0 10px 15px;
  text-align: left;
  background: linear-gradient(
    90deg,
    rgba(0, 167, 81, 0.74) 3.16%,
    rgba(209, 250, 229, 0.5254) 64.68%,
    rgba(209, 250, 229, 0) 82.97%
  );
}

.slider-header {
  color: #1b1c57;
}
.home-left {
  position: relative;
  height: 100%;
  width: 50%;
}
.home-text {
  position: absolute;
  left: 9%;
}
.home-title {
  text-transform: capitalize;
  color: #1b1c57;
  font-size: 40px;
  line-height: 50px;
  font-weight: 600;
  font-style: normal;
}
.home-title__clip {
  -webkit-text-fill-color: transparent;
  color: transparent;
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-stroke: 1.5px #1b1c57;
}

.home-title,
.home-para,
.search-form {
  margin: 2rem 0;
}

.input-group > .input-group-prepend > .btn {
  border-radius: 0 4px 4px 0;
}
/* Homepage End */

/* featured houses style Start */
.featured-units-home {
  position: relative;
  font-family: "Poppins", sans-serif;
  margin: 100px 0;
}
.featured-header {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translate(-50%, -50%);
  margin-bottom: 4%;
}
.featured-header h4 {
  color: #1b1c57;
  font-weight: bolder;
  font-size: 32px;
}
.toggle-button {
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
}
.toggle-button button {
  border-radius: 2em;
  width: 60px;
  font-size: 1.1em;
  font-weight: bolder;
  padding: 6px 8px;
}
.featured-card {
  width: 18rem;
  margin: 2%;
  background: none;
  border: none;
}

.featured-image img {
  border-radius: 1.5em;
  height: 400px;
}

.featured-image {
  position: relative;
}
.featured-tag {
  position: absolute;
  left: 5%;
  bottom: 0;
  font-weight: bold;
}

.featured-tag > p {
  background-color: #d1fae5bd;
  border-radius: 2em;
  padding: 0.5em 1em;
  font-weight: 800;
  font-size: 14px;
}
div > .featured-card:first-child > .featured-image > .featured-tag p {
  background-color: hsla(149, 84%, 58%, 0.71);
  color: #1f2f58;
}
div > .featured-card:nth-child(2) > .featured-image > .featured-tag p {
  background-color: #dbeafe;
  color: #1d4ed8;
}

div > .featured-card:nth-child(3) > .featured-image > .featured-tag p {
  color: #047857;
}

.ft-card-body > .ft-card-text {
  font-weight: bold;
  font-size: 24px;
  color: #0e1735;
}
.ft-card-body > .ft-card-text:last-child {
  color: #3c4563;
  font-size: 20px;
}
.slide-2 {
  display: none;
}
/* featured houses style end */

/* section booktour start */
.ft-bookTour {
  margin-top: 100px;
  margin-right: 15px;
}
.sideA {
  padding-left: 8%;
  height: 403px;
  margin: 28px 10px 28px 0px;
}
.hr-line {
  display: flex;
  flex-direction: row;
  color: #f59e0b;
}
.hr-line:before {
  width: 0px;
  content: "";
  flex: 1 1;
  border-bottom: 2px solid #f59e0b;
  margin: auto;
}
.detail {
  width: 65%;
  height: 124px;
  color: #1b1c57;
}
.detail1,
.detail2 {
  display: flex;
  align-items: flex-start;
  height: 32px;
  width: 100%;
  padding: 0px;
}

.sideA h2 {
  font-weight: 600;
  font-size: 32px;
  line-height: 40px;
  text-transform: capitalize;
  color: #1b1c57;
}
.sideA p {
  font-weight: 400;
  font-size: 16px;
  line-height: 28px;
  color: #626687;
  opacity: 0.75;
}
.solid {
  margin-bottom: 27px;
}
.contact {
  width: 65%;
  height: 52.48px;
  margin-top: 40px;
}
.clogo {
  width: 52.48px;
  height: 52.48px;
  border-radius: 50px;
}
.contact-agent {
  height: 52px;
}
.contact-agent h3 {
  color: #0e1735;
  font-weight: 500;
  font-size: 18px;
}
.contact-agent h4 {
  font-weight: 500;
  font-size: 16px;
  color: #888b97;
  opacity: 0.75;
}
.main-form {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  width: 100%;
  height: 500px;
}
.main-form input {
  height: 35px;
}
.send {
  width: 150px;
  height: 35px;
}
.sideB {
  padding-right: 70px;
  height: 459px;
  margin-right: 6%;
}
.sideB .pic1 {
  background: url(../images/home1.jpeg);
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-position: center center;
  position: absolute;
  width: 80%;
  height: 90%;
  left: 20%;
  border-radius: 4px;
}
.sideB .pic2 {
  background: url(../images/sofa1.jpeg);
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-position: center center;
  position: absolute;
  width: 296px;
  height: 168px;
  left: 13%;
  bottom: 0%;
  border-radius: 4px;
}
.sideB .pic3 {
  background: url(../images/flower.jpeg);
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-position: center center;
  position: absolute;
  width: 96px;
  height: 80px;
  left: 63%;
  bottom: 0%;
  border-radius: 4px;
}
.sideB .pic4 {
  background: url(../images/seat.jpeg);
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-position: center center;
  position: absolute;
  width: 96px;
  height: 80px;
  left: 80%;
  bottom: 0%;
  border-radius: 4px;
}
.sideB .play {
  background: url(../images/play.png);
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-position: center center;
  height: 48px;
  width: 48px;
  position: absolute;
  left: 55%;
  top: 40%;
  backdrop-filter: blur(5px);
}
/* booktour End */

